# History-AI

./: .gitignore
backend/: .env.example  pyproject.toml  run.ps1
backend/alembic/: env.py
backend/alembic/versions/: 47405365b158_create_cards_table.py
backend/app/: dependencies.py  main.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: ai.py  cards.py
backend/app/core/: config.py
backend/app/crud/: __init__.py  crud_card.py
backend/app/db/: base.py  models.py  session.py
backend/app/schemas/: __init__.py  ai.py  card.py
backend/app/services/: ai_service.py  card_service.py
backend/app/utils/: __init__.py  bias_validator.py  card_validator.py  gemini_client.py  pdf_parser.py  prompts.py  response_parser.py
backend/tests/: conftest.py  test_ai_service.py
backend/tests/services/: test_ai_service.py  test_ai_service_validation.py  test_card_service.py
backend/tests/utils/: test_prompts.py
frontend/: package.json  pnpm-lock.yaml  response.json
frontend/app/: globals.css  layout.tsx
frontend/app/(main)/: layout.tsx  page.tsx
frontend/app/(main)/cards/[id]/: loading.tsx  page.tsx
frontend/components/cards/: add-card-dialog.tsx  blog-card-content.tsx  card-preview.tsx
frontend/components/layout/: card-grid.tsx  header.tsx  search-panel.tsx  theme-toggle.tsx
frontend/components/ui/: file-upload.tsx
frontend/store/: app-store.ts
